# old-esteid-stack

./: AUTHORS  CMakeLists.txt  ChangeLog  EstEIDSigningPluginBHO.sln  EsteidUtil.sln  EsteidUtil.workspace  Makefile.am  NEWS  README  acinclude.m4  bootstrap  common.lua  configure.in  debianpack.sh  doclean.sh  esteidcsp.sln  esteidutil.desktop  esteidutil.spec.in  linuxpackage.sh  mkrepo.sh  premake.lua  premake4.lua  prepwinrelease.bat  smartcard++-1.0.pc.in
EstEIDSigningPluginBHO/: CardMonitorThread.cpp  CardMonitorThread.h  EstEIDSigningBHO.cpp  EstEIDSigningBHO.h  EstEIDSigningPluginBHO.cpp  EstEIDSigningPluginBHO.idl  EstEIDSigningPluginBHO.rc  EstEIDSigningPluginBHO.vcproj  EstEIDSigningPluginBHO_2005.vcproj  Makefile.am  Setup.h  SmartCardCertificate.cpp  SmartCardCertificate.h  SmartCardSigner.cpp  SmartCardSigner.h  SmartCardSigner.rgs  _ISmartCardSignerEvents_CP.h  dllmain.cpp  precompiled.h  resource.h  stdafx.cpp  test.html  version.rc
SmartCardRemoval/: SmartCardRemoval.cpp  SmartCardRemoval.h  SmartCardRemoval.rc  SmartCardRemoval.sln  SmartCardRemoval.vcproj  SmartCardRemovalPS.vcproj
debian/: EsteidUtil.sgml  (+7 more)
smartcard++/: CMakeLists.txt  CTAPIManager.cpp  CTAPIManager.h  CardBase.cpp  CardBase.h  DynamicLibrary.cpp  DynamicLibrary.h  Makefile.am  ManagerInterface.h  PCSCManager.cpp  PCSCManager.h  PinString.h  SCError.cpp  SCError.h  SmartCardManager.cpp  SmartCardManager.h  checkwarnings.sh  locked_allocator.cpp  locked_allocator.h  premake4.lua  smartcard++.h
smartcard++/esteid/: EstEidCard.cpp  EstEidCard.h  EstEidCardMaintainer.cpp  EstEidCardMaintainer.h
smartcard++/sim/: SIMCard.cpp  SIMCard.h
src/: AppSetting.cpp  AppSetting.h  CertificateDialog.cpp  CertificateDialog.h  DiagnosticsDialog.cpp  DiagnosticsDialog.h  EsteidUtil.cbp  EsteidUtil.cpp  EsteidUtil.depend  EsteidUtil.layout  EsteidUtil.rc  EsteidUtil.vcproj  MainDialog.cpp  MainDialog.h  MainDialog_2.cpp  MainDialog_Image.cpp  MainDialog_Pin.cpp  MainDialog_Windows.cpp  Makefile.am  Makefile.gnu  PersonalDataDialog.cpp  PersonalDataDialog.h  PinChangeDialog.cpp  PinChangeDialog.h  PinChangeSecureDialog.cpp  PinChangeSecureDialog.h  PinDialog.cpp  PinDialog.h  Setup.h  precompiled.h  premake.lua  premake4.lua  resource.h
src/cardlib/: CTAPIManager.cpp  CTAPIManager.h  CardBase.cpp  CardBase.h  Doxyfile  DynamicLibrary.cpp  DynamicLibrary.h  EstEidCard.cpp  EstEidCard.h  EstEidCardMaintainer.cpp  EstEidCardMaintainer.h  Makefile.am  ManagerInterface.h  PCSCManager.cpp  PCSCManager.h  SCError.cpp  SCError.h  SmartCardManager.cpp  SmartCardManager.h  common.h  mkdocs.sh  premake.lua  premake4.lua  types.cpp  types.h
src/esteidpkcs11/: CMakeLists.txt  Makefile.am  PKCS11Context.cpp  Setup.h
src/esteidutil/: CMakeLists.txt  DiagnosticsDialog.cpp  DiagnosticsDialog.h  EsteidUtil.cpp  MainDialog.cpp  MainDialog.h  MainDialog_2.cpp  MainDialog_Image.cpp  MainDialog_Pin.cpp  MainDialog_Windows.cpp  Makefile.am  PersonalDataDialog.cpp  precompiled.h  premake4.lua
src/esteidutil/cardlib/: EstEidCard.cpp
src/esteidutil/pkcs11/: precompiled.h
src/esteidutil/resources/: auth_icon.xpm  esteid.xpm  logo_sk.xpm
src/esteidutil/tests/: testreadcardid.cpp
src/esteidutil/utility/: asnCertificate.cpp  pkcs11module.cpp
src/esteidutil/wxConfig/: configure_wx.sh
src/macosx/EstEID.tokend/EstEID/: EstEIDError.cpp  EstEIDError.h  EstEIDKeyHandle.cpp  EstEIDKeyHandle.h  EstEIDRecord.cpp  EstEIDRecord.h  EstEIDSchema.cpp  EstEIDSchema.h  EstEIDToken.cpp  EstEIDToken.h  EstEID_utility.cpp  EstEID_utility.h  Info.plist  esteid.cpp
src/macosx/EstEID.tokend/EstEID_2.xcclassmodel/: elements  layout
src/pkcs11/: Makefile  Makefile.am  PKCS11Context.cpp  PKCS11Context.h  Setup.h  compile_and_link.sh  esteidpkcs11.rc  firefox_debug.txt  premake.lua  premake4.lua
src/qt-id-updater/: CMakeLists.txt  InstallChecker.cpp  InstallChecker.h  Makefile.am  ProcessStarter.cpp  ProcessStarter.h  ScheduledUpdateTask.cpp  ScheduledUpdateTask.h  id-updater.pro  id-updater.vcproj  idupdater.cpp  idupdater.h  idupdater.qrc  idupdater.rc  idupdater.ui  main.cpp
src/tests/: CMakeLists.txt  Makefile  Makefile.am  precompiled.h  premake.lua  premake4.lua  test1.vcproj  test2.vcproj  test3.vcproj  test4.vcproj  testcardmanager.cpp  testcert.cpp  testctapi.cpp  testdownload.cpp  testlogger.cpp  testmonitorthread.cpp  testpindialog.cpp  testpindialog.rc  testpindialog_resource.h  testpkcs.cpp  testreadcardid.cpp  tests.sln  testsign.cpp
src/utility/: CMakeLists.txt  Makefile.am  asnCertificate.cpp  asnCertificate.h  asnObject.cpp  asnObject.h  converters.cpp  converters.h  logger.cpp  logger.h  monitorThread.cpp  monitorThread.h  netObj.h  opensslObj.cpp  opensslObj.h  pinDialog.cpp  pinDialog.h  pinDialog.rc  pinDialog_res.h  pkcs11module.cpp  pkcs11module.h  premake.lua  premake4.lua  threadObj.cpp  threadObj.h  winInetObj.cpp  winInetObj.h
src/windows/: Makefile.am
src/windows/EstEIDSigningPluginBHO/: BHOIEToolsItem.cpp  BHOIEToolsItem.h  CMakeLists.txt  CardMonitorThread.h  EstEIDSigningBHO.cpp  EstEIDSigningBHO.h  EstEIDSigningBHO.rgs  EstEIDSigningPluginBHO.cpp  EstEIDSigningPluginBHO.idl  EstEIDSigningPluginBHO.rc  EstEIDSigningPluginBHO_2005.vcproj  Setup.h  SmartCardCertificate.cpp  SmartCardCertificate.h  SmartCardSigner.cpp  SmartCardSigner.h  precompiled.h  resource.h  targetver.h  test.html
src/windows/SmartCardRemoval/: SmartCardRemoval.rc  SmartCardRemoval.vcproj  precompiled.h
src/windows/csp_tool/: csp_tool.cpp
src/windows/csp_tool/pkicommon/: cryptContext.cpp
src/windows/esteidcm/: esteidcm.cpp
src/windows/esteidcsp/: CSPErrors.h  CSPTypes.cpp  CSPTypes.h  Csp.cpp  CspEstEid.cpp  Csp_Hash.cpp  RegKey.cpp  Setup.h  premake4.lua
src/windows/idutil2/: idutil2.sln
src/windows/idutil2/idutil2/: WorkerClass.h  dlldatax.c  idutil2.cpp  idutil2.idl  idutil2.rc  idutil2.rgs  precompiled.h  resource.h
src/windows/idutil2/idutil_en/: install.htm  readme.txt
src/windows/idutil2/idutil_en/demo/: idutil.cab  test.html  xmldom.vbs
src/wxConfig/: configure_wx.sh
src/wxConfig/minimal/: setup.h
(+106 files in other folders)
