
dnl --------------------------------
dnl Initialization macros.
dnl --------------------------------

AC_INIT(smartcard++/smartcard++.h)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

dnl -----------------------------------------------
dnl Package name and version number (user defined)
dnl -----------------------------------------------

SMARTCARD_LIBRARY_NAME=smartcard++

#release versioning
SMARTCARD_MAJOR_VERSION=0
SMARTCARD_MINOR_VERSION=10
SMARTCARD_MICRO_VERSION=2

PKCS11_MAJOR_VERSION=0
PKCS11_MINOR_VERSION=3
PKCS11_MICRO_VERSION=0

SMARTCARD_VERSION=$SMARTCARD_MAJOR_VERSION.$SMARTCARD_MINOR_VERSION.$SMARTCARD_MICRO_VERSION
SMARTCARD_VERSION_INFO=`expr $SMARTCARD_MAJOR_VERSION + $SMARTCARD_MINOR_VERSION`:$SMARTCARD_MICRO_VERSION:$SMARTCARD_MINOR_VERSION
SMARTCARD_VERSION_NUMBER=`expr $SMARTCARD_MAJOR_VERSION \* 10000 + $SMARTCARD_MINOR_VERSION \* 100 + $SMARTCARD_MICRO_VERSION`
SMARTCARD_RELEASE=$SMARTCARD_MAJOR_VERSION.$SMARTCARD_MINOR_VERSION

PKCS11_VERSION_INFO=`expr $PKCS11_MAJOR_VERSION + $PKCS11_MINOR_VERSION`:$PKCS11_MICRO_VERSION:$PKCS11_MINOR_VERSION
PKCS11_RELEASE=$PKCS11_MAJOR_VERSION.$PKCS11_MINOR_VERSION

AC_SUBST(SMARTCARD_LIBRARY_NAME)
AC_SUBST(SMARTCARD_MAJOR_VERSION)
AC_SUBST(SMARTCARD_MINOR_VERSION)
AC_SUBST(SMARTCARD_MICRO_VERSION)
AC_SUBST(SMARTCARD_VERSION)
AC_SUBST(SMARTCARD_VERSION_INFO)
AC_SUBST(SMARTCARD_VERSION_NUMBER)
AC_SUBST(SMARTCARD_RELEASE)
AC_SUBST(PKCS11_VERSION_INFO)
AC_SUBST(PKCS11_RELEASE)

dnl --------------------------------
dnl Package name and version number
dnl --------------------------------

PACKAGE=esteidutil

VERSION=${SMARTCARD_VERSION}

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl -----------------------------------------------
dnl Checks for programs.
dnl -----------------------------------------------

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AM_SANITY_CHECK

AC_LANG_CPLUSPLUS
AC_STDC_HEADERS
AC_CHECK_HEADERS(string cstring)

AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.6.0, wxWin=1)
CHECK_SSL

dnl -----------------------------------------------
dnl Generates Makefile's, configuration files and scripts
dnl -----------------------------------------------

AC_OUTPUT(Makefile \
          smartcard++-1.0.pc \
          smartcard++/Makefile \
          smartcard++/esteid/Makefile \
          smartcard++/sim/Makefile \
	  src/Makefile \
	  src/utility/Makefile \
	  src/esteidpkcs11/Makefile \
	  src/esteidutil/Makefile \
	  src/tests/Makefile \
	  src/qt-id-updater/Makefile \
	  src/windows/Makefile \
	  src/windows/esteidcm/Makefile \
	  src/windows/esteidcsp/Makefile \
	  src/windows/EstEIDSigningPluginBHO/Makefile \
	  src/windows/csp_tool/Makefile
)

