EXTRA_DIST = \
esteidpkcs11.cpp \
esteidpkcs11.rc \
PKCS11Context.cpp \
PKCS11Context.h \
precompiled.cpp \
precompiled.h \
premake4.lua \
Setup.h \
version.rc \
pkcs11/cryptoki.h \
pkcs11/pkcs11f.h \
pkcs11/pkcs11.h \
pkcs11/pkcs11t.h \
mac_pkcs11_headers/cryptoki.h \
mac_pkcs11_headers/cryptoki_unix.h \
mac_pkcs11_headers/p11x_msc.h \
mac_pkcs11_headers/pkcs11f.h \
mac_pkcs11_headers/pkcs11.h \
mac_pkcs11_headers/pkcs11t.h
